[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.0.12"
spl-token = { version = ">=5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = ">=5", features = ["no-entrypoint"] }
solana-program = "2"
borsh = "1"
bytemuck = "1.19.0"
lib-sokoban = "0.3.0"
num_enum = "0.5.9"
itertools = "0.10.5"
thiserror = "^1.0.40"
ellipsis-macros = { git = "https://github.com/jup-ag/ellipsis-macros.git", rev = "142c920ce91b0e41bb06c833dea46269cc868d14" }
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"

# [dev-dependencies]
# rand = "0.7.3"
# ellipsis-client = "0.2.1"
# tokio = { version = "1.29.1", features = ["full"] }
# solana-sdk = "=1.14.9"
# phoenix-sdk = "0.4.4"
